[gd_scene load_steps=44 format=2]

[ext_resource path="res://Scripts/player.gd" type="Script" id=1]
[ext_resource path="res://Assets/Art/MZmapsprites/actor1-1[VS8].png" type="Texture" id=2]
[ext_resource path="res://Assets/Art/MZmapsprites/punch&kick.png" type="Texture" id=3]
[ext_resource path="res://Assets/Art/MZmapsprites/climb.png" type="Texture" id=4]
[ext_resource path="res://Assets/Art/burning_end_2.png" type="Texture" id=5]
[ext_resource path="res://Assets/Music/SFX/boomerang_hit.mp3" type="AudioStream" id=6]
[ext_resource path="res://Assets/Music/SFX/boomerang_catch.mp3" type="AudioStream" id=7]
[ext_resource path="res://Assets/Music/SFX/boomerang_throw.mp3" type="AudioStream" id=8]
[ext_resource path="res://Assets/Music/SFX/climb.mp3" type="AudioStream" id=9]
[ext_resource path="res://Assets/Music/SFX/walk_on_grass.mp3" type="AudioStream" id=10]
[ext_resource path="res://Assets/Music/SFX/collectible.mp3" type="AudioStream" id=11]
[ext_resource path="res://Assets/Music/SFX/player_hurt.mp3" type="AudioStream" id=12]
[ext_resource path="res://Assets/Music/SFX/sword_hit.wav" type="AudioStream" id=13]
[ext_resource path="res://Assets/Music/SFX/sword_swing.mp3" type="AudioStream" id=14]
[ext_resource path="res://Assets/Music/SFX/leaf_hurt.mp3" type="AudioStream" id=15]
[ext_resource path="res://Assets/Music/SFX/jump.mp3" type="AudioStream" id=16]
[ext_resource path="res://Assets/Music/SFX/player_kick.mp3" type="AudioStream" id=17]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 10 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 100, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 4 )
region = Rect2( 200, 100, 100, 100 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 100, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=10]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 400, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=11]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 500, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=12]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 600, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=13]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 700, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=14]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 800, 300, 100, 100 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 100, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 200, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=35]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 400, 100, 100 )

[sub_resource type="AtlasTexture" id=36]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 100, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=37]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 100, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=38]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 100, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=39]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 100, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 20, 24 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 20, 0, 20, 24 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 40, 0, 20, 24 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 60, 0, 20, 24 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 5 )
region = Rect2( 80, 0, 20, 24 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 600, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 700, 200, 100, 100 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 800, 200, 100, 100 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ SubResource( 26 ), SubResource( 27 ) ],
"loop": true,
"name": "climbing",
"speed": 5.0
}, {
"frames": [ SubResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ), SubResource( 14 ) ],
"loop": true,
"name": "kicking",
"speed": 15.0
}, {
"frames": [ SubResource( 33 ), SubResource( 34 ), SubResource( 35 ), null, SubResource( 36 ), null, SubResource( 37 ), null, SubResource( 38 ), null, SubResource( 39 ) ],
"loop": true,
"name": "take_damage",
"speed": 8.0
}, {
"frames": [ SubResource( 28 ), SubResource( 29 ), SubResource( 30 ), SubResource( 31 ), SubResource( 32 ) ],
"loop": false,
"name": "vanishing",
"speed": 5.0
}, {
"frames": [ SubResource( 23 ), SubResource( 24 ), SubResource( 25 ) ],
"loop": true,
"name": "walking",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 5, 10 )

[node name="Player" type="KinematicBody2D"]
collision_mask = 4
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.5, -0.5 )
shape = SubResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -4 )
scale = Vector2( 0.28, 0.28 )
frames = SubResource( 2 )
animation = "vanishing"
frame = 4
playing = true

[node name="Hurtbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2( -0.5, -0.5 )
shape = SubResource( 3 )

[node name="PunchTimer" type="Timer" parent="."]
one_shot = true

[node name="KickTimer" type="Timer" parent="."]
one_shot = true

[node name="InvincibilityTimer" type="Timer" parent="."]
one_shot = true

[node name="SwordTimer" type="Timer" parent="."]
one_shot = true

[node name="VanishTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="KickAnimationTimer" type="Timer" parent="."]
wait_time = 0.33
one_shot = true

[node name="RecoilTimer" type="Timer" parent="."]
one_shot = true

[node name="boomerang_throw" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[node name="boomerang_catch" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 7 )

[node name="boomerang_hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 6 )
volume_db = 15.344

[node name="climb" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 9 )
volume_db = -10.23

[node name="walk" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )

[node name="collectible" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 11 )

[node name="player_hurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )

[node name="sword_swing" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 14 )

[node name="sword_hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 13 )

[node name="leaf_hurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 15 )
volume_db = 11.934

[node name="jump" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 16 )

[node name="player_kick" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 17 )

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="area_exited" from="Hurtbox" to="." method="_on_Hurtbox_area_exited"]
[connection signal="timeout" from="PunchTimer" to="." method="_on_PunchTimer_timeout"]
[connection signal="timeout" from="KickTimer" to="." method="_on_KickTimer_timeout"]
[connection signal="timeout" from="InvincibilityTimer" to="." method="_on_InvincibilityTimer_timeout"]
[connection signal="timeout" from="SwordTimer" to="." method="_on_SwordTimer_timeout"]
[connection signal="timeout" from="VanishTimer" to="." method="_on_VanishTimer_timeout"]
[connection signal="timeout" from="KickAnimationTimer" to="." method="_on_KickAnimationTimer_timeout"]
[connection signal="timeout" from="RecoilTimer" to="." method="_on_RecoilTimer_timeout"]
